--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -366,26 +366,65 @@
           }
 
           .menu {
-            font-size: .6rem;
+            font-size: .65rem;
             font-weight: 500;
             padding: 0;
             left: auto;
             right: 0;
-            min-width: 7rem;
+            min-width: 20rem;
 
             .dropdown-menu-item {
               width: 100%;
               display: flex;
               align-items: center;
+              justify-content: space-between;
               gap: .5rem;
               cursor: pointer;
               border-radius: .4rem;
-              padding: .25rem .5rem;
               transition: all .5s ease;
 
               &:hover {
                 background-color: rgba($color: #cecece, $alpha: .3);
               }
+
+              .item-left {
+                .token-logo-container {
+                  align-items: center;
+                  border-radius: 50%;
+                  display: flex;
+                  flex: 0 0 2rem;
+                  height: 2rem;
+                  justify-content: center;
+                  margin: .25rem 1rem .25rem 0;
+                  position: relative;
+                  width: 2rem;
+
+                  .logo-icon {
+                    width: 1.8rem;
+                  }
+
+                  .chain-icon {
+                    align-items: center;
+                    background: $bg-color;
+                    border-radius: 50%;
+                    bottom: -.2rem;
+                    box-shadow: 0 .1rem .4rem -.4rem rgba($dark-color, .25), 0 .1rem .2rem rgba($dark-color, .05);
+                    display: flex;
+                    flex: 0 0;
+                    height: 1rem;
+                    padding: .2rem;
+                    position: absolute;
+                    right: -.2rem;
+                    width: 1rem;
+                  }
+                }
+
+                display: flex;
+                align-items: center;
+                gap: .25rem;
+
+              }
+
             }
           }
         }
