--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -333,6 +333,19 @@
       gap: .75rem;
       position: relative;
 
+      .price-selector {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        gap: .5rem;
+        margin-bottom: .5rem;
+
+        .form-input {
+          width: 4rem;
+        }
+      }
+
       .currency-input-container {
         width: 100%;
         position: relative;
