--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -21,6 +21,7 @@
 // Components
 @import "spectre/avatars";
 @import "spectre/cards";
+@import "spectre/chips";
 @import "spectre/dropdowns";
 @import "spectre/empty";
 @import "spectre/menus";
