--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1384,7 +1384,7 @@
   // Gitcoin Widget
   .profile-widget-gitcoin {
     background: linear-gradient(45deg, rgba(#4341B7, .15) 0, rgba(#fff, 1) 25%);
-
+    cursor: pointer;
     .widget-trait-list {
       display: flex;
       flex-wrap: wrap;
