--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -1002,7 +1002,45 @@
   .panel-widget-content {
     display: flex;
     flex-wrap: wrap;
+    &.widget-trait-list {
+      display: flex;
+      flex-wrap: wrap;
+      gap: .4rem;
+      height: 100%;
+      overflow-y: auto;
+      width: 100%;
 
+      .trait-item {
+        &.action_tier_legendary {
+          background-image: linear-gradient(124.2deg, #d6fdff 8%, #bad1ff 34%, #7cd4f0 74%, #b4fffa 95%);
+          order: -12;
+        }
+
+        &.action_tier_epic {
+          background-image: linear-gradient(113.06deg, #ffd6d6 19%, #ffbaf8 34%, #9593ff 85%);
+          order: -9;
+        }
+
+        &.action_tier_rare {
+          background-image: linear-gradient(117.25deg, #f1cc9c 20%, #f2a94e 42%, #f07c7c 65%, #fbade5 96%);
+          order: -6;
+        }
+
+        &.action_tier_uncommon {
+          background-image: linear-gradient(90.47deg, #e9f3ad 2%, #c6d390 32%, #7cbc55 98%);
+          order: -3;
+        }
+
+        &.action_tier_common {
+          display: none;
+        }
+
+        &.degen_score {
+          display: none;
+          order: -15;
+        }
+      }
+    }
     .traits-cards {
       display: flex;
       flex-wrap: wrap;
