Update Modal POAP

--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -657,6 +657,7 @@
 
       .img-responsive {
         border-radius: 50%;
+        box-shadow: 0 0 0 .25rem #E4E2FD;
         height: 10rem;
         width: 10rem;
       }
