--- a/styles/_feed.scss
+++ b/styles/_feed.scss
@@ -181,7 +181,7 @@
         border-radius: .4rem;
         box-shadow: 0 .1rem .4rem rgba($dark-color, .05);
         color: $dark-color;
-        margin: 1rem 0;
+        margin: .5rem 0;
         max-width: 24rem;
         width: 100%;
 
