--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -10,11 +10,36 @@
   bottom: 0;
   z-index: 1000;
   backdrop-filter: blur(.2rem);
+}
+
+.modal-container {
+  background: $light-color;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  height: calc(100vh - 4rem);
+  max-width: 28rem;
+  overflow: hidden;
+  overscroll-behavior: contain;
+  padding: 1.5rem 2rem;
+  position: relative;
+  scroll-behavior: smooth;
+  width: 100%;
+  z-index: 101;
+  
+  @media screen and (max-width: $size-sm) {
+    padding: 1.5rem;
+
+    @supports (height: 100dvh) {
+      height: calc(100dvh - .5rem);
+      width: calc(100dvw - .5rem);
+    }
+  }
 
   .modal-actions {
     display: flex;
     gap: .5rem;
-    position: fixed;
+    position: absolute;
     right: 1rem;
     top: 1rem;
     z-index: 999;
@@ -34,29 +59,50 @@
       }
     }
   }
-}
 
-.modal-container {
-  background: transparent;
-  border-radius: 1rem;
-  height: 100%;
-  max-height: 100vh;
-  max-width: $size-xl;
-  overscroll-behavior: contain;
-  padding: 2rem;
-  position: relative;
-  scroll-behavior: smooth;
-  width: 100%;
-  z-index: 101;
-
-  @media screen and (max-width: $size-sm) {
-    @supports (height: 100dvh) {
-      height: 100dvh;
-    }
+  .modal-body {
+    overflow-y: auto;
+    overscroll-behavior: contain;
   }
 
-  @media screen and (max-width: $size-sm) {
-    padding: .5rem;
+  &.modal-nft-container,
+  &.modal-media-container,
+  &.modal-search-container {
+    background: transparent;
+    height: 100%;
+    max-height: 100vh;
+    max-width: $size-xl;
+    padding: 2rem;
+    position: relative;
+    width: 100%;
+
+    @media screen and (max-width: $size-sm) {
+      @supports (height: 100dvh) {
+        height: 100dvh;
+      }
+    }
+  
+    @media screen and (max-width: $size-sm) {
+      padding: .5rem;
+    }
+
+    .modal-actions {
+      position: fixed;
+
+      .btn {
+        background: rgba($bg-color, .25);
+  
+        &:focus,
+        &:hover {
+          background: rgba($bg-color, .45);
+        }
+  
+        &:active,
+        &.active {
+          background: rgba($bg-color, .65);
+        }
+      }
+    }
   }
 
   .modal-cover {
@@ -408,8 +454,6 @@
             }
           }
         }
-
-
       }
 
       .currency-input-container {
@@ -491,21 +535,10 @@
 
   // Modal Share
   &.modal-share-container {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
     height: auto;
-    max-height: calc(100vh - 4rem);
-    max-width: 28rem;
-    padding: 1.5rem 2rem;
-    width: calc(100vw - .5rem);
 
-    @media screen and (max-width: $size-sm) {
-      padding: 1.5rem;
-    }
-
-    .modal-actions {
-      position: absolute;
+    .modal-body {
+      overflow-y: unset;
     }
 
     .modal-footer-actions {
@@ -557,40 +590,7 @@
     }
   }
 
-  // Modal Profile, Modal Guild
-  &.modal-profile-container,
-  &.modal-snapshot-container,
-  &.modal-degenscore-container,
-  &.modal-gitcoin-container,
-  &.modal-guild-container,
-  &.modal-poaps-container {
-    background: $light-color;
-    display: flex;
-    flex-direction: column;
-    height: calc(100vh - 6rem);
-    max-width: 28rem;
-    overflow: hidden;
-    padding: 1.5rem 2rem;
-    width: 95%;
-
-    @media screen and (max-width: $size-sm) {
-      padding: 1.5rem;
-
-      @supports (height: 100dvh) {
-        height: calc(100dvh - .5rem);
-        width: calc(100dvw - .5rem);
-      }
-    }
-
-    .modal-actions {
-      position: absolute;
-    }
-
-    .modal-body {
-      overflow-y: auto;
-    }
-  }
-
+  // Modal Profile
   &.modal-profile-container {
     .active-badge {
       align-items: center;
@@ -619,6 +619,7 @@
     }
   }
 
+  // Modal Gitcoin
   &.modal-gitcoin-container {
     .stamp-item {
       gap: .5rem;
@@ -648,6 +649,7 @@
     }
   }
 
+  // Modal POAP
   &.modal-poaps-container {
     .img-container {
       display: flex;
@@ -670,8 +672,6 @@
     padding-top: 15vh;
 
     .web3bio-search {
-      margin: auto;
-
       .web3bio-logo {
         margin-bottom: 1rem;
       }
@@ -681,8 +681,6 @@
       }
     }
   }
-
-
 
   // Modal Article
   &.modal-article-container {
