--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -26,7 +26,7 @@
   scroll-behavior: smooth;
   width: 100%;
   z-index: 101;
-  
+
   @media screen and (max-width: $size-sm) {
     padding: 1.5rem;
 
@@ -81,7 +81,7 @@
         height: 100dvh;
       }
     }
-  
+
     @media screen and (max-width: $size-sm) {
       padding: .5rem;
     }
@@ -91,12 +91,12 @@
 
       .btn {
         background: rgba($bg-color, .25);
-  
+
         &:focus,
         &:hover {
           background: rgba($bg-color, .45);
         }
-  
+
         &:active,
         &.active {
           background: rgba($bg-color, .65);
@@ -113,6 +113,10 @@
     right: -2rem;
     top: -2rem;
     z-index: -1;
+
+    &.talent {
+      background: linear-gradient(to top, rgba(#7857ed, 0) 0%, rgba(#7857ed, .35) 200%);
+    }
 
     &.gitcoin {
       background: linear-gradient(to top, rgba(#19423B, 0) 0%, rgba(#19423B, .35) 200%);
@@ -619,8 +623,9 @@
     }
   }
 
-  // Modal Gitcoin
-  &.modal-gitcoin-container {
+  // Modal Gitcoin, Talent
+  &.modal-gitcoin-container,
+  &.modal-talent-container {
     .stamp-item {
       gap: .5rem;
       margin: .2rem -.4rem;
@@ -1061,7 +1066,7 @@
   .panel-widget-content {
     display: flex;
     flex-wrap: wrap;
-    
+
     .widget-trait-list {
       display: flex;
       flex-wrap: wrap;
@@ -1101,6 +1106,7 @@
         }
       }
     }
+
     .traits-cards {
       display: flex;
       flex-wrap: wrap;
