Update Modals and Talent

--- a/styles/_profile.scss
+++ b/styles/_profile.scss
@@ -1383,7 +1383,7 @@
 
   // Gitcoin Widget
   .profile-widget-gitcoin {
-    background: linear-gradient(45deg, rgba(#4341B7, .15) 0, rgba(#fff, 1) 25%);
+    background: linear-gradient(45deg, rgba(#4A47D3, .15) 0, rgba(#fff, 1) 25%);
     cursor: pointer;
     .widget-trait-list {
       display: flex;
