--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -119,7 +119,7 @@
     }
 
     &.gitcoin {
-      background: linear-gradient(to top, rgba(#19423B, 0) 0%, rgba(#19423B, .35) 200%);
+      background: linear-gradient(to top, rgba(#4A47D3, 0) 0%, rgba(#4A47D3, .35) 200%);
     }
 
     &.degenscore {
