chore: updates domain suggetions

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -360,7 +360,7 @@
         }
 
         &.available {
-          color: rgb(113, 235, 170);
+          color: #007a39;
           background-color: rgb(113, 235, 170, .1);
         }
 
