--- a/styles/web3bio.scss
+++ b/styles/web3bio.scss
@@ -680,6 +680,7 @@ body {
   }
 
   .feed-token-value {
+    font-weight: 500;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
