Update domain search

--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -352,7 +352,7 @@
 
       .domain-status {
         border-radius: .25rem;
-        padding: .1rem .25rem;
+        padding: 0 .25rem;
         font-weight: 500;
         margin-left: .5rem;
         text-transform: uppercase;
