--- a/styles/spectre/_toasts.scss
+++ b/styles/spectre/_toasts.scss
@@ -9,27 +9,5 @@
   color: $light-color;
   display: flex;
   font-size: .8rem;
-  padding: .8rem;
-
-  a {
-    color: $light-color;
-    text-decoration: underline;
-    
-    &:focus,
-    &:hover,
-    &:active,
-    &.active {
-      opacity: .75;
-    }
-  }
-
-  .btn-clear {
-    margin: $unit-h;
-  }
-
-  p {
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
+  padding: .6rem .8rem;
 }
