--- a/styles/_search.scss
+++ b/styles/_search.scss
@@ -110,21 +110,18 @@
         width: 100%;
 
         .suggest-btn {
-          &.active-suggest{
-            background: $dark-color;
-            color: $light-color
-          }
           margin-left: auto;
         }
 
         .search-list-item {
-          flex: 0 0 2rem;
-          width: 2rem;
+          &.search-list-item-sm {
+            flex: 0 0 2rem;
+            width: 2rem;
+          }
         }
       }
 
       .search-list-item {
-        width: 100%;
         align-items: center;
         border-radius: .4rem;
         cursor: pointer;
